# rust_for_robocon

./: .gitignore  README.md  cpp架构移植.md  rust_for_robocon.code-workspace  开发者日志.md
.claude/: settings.local.json
gdut-r1-by-rust/: .probe-rs.toml  Cargo.toml  flash.bat  memory.x
gdut-r1-by-rust/.cargo/: config.toml
gdut-r1-by-rust/examples/: fdcan_nooc.rs  fdcan_studydemo.rs  m3508_control_demo.rs  pid_test.rs  rtt_debugtool_demo.rs  rtt_debugtool_uart_demo.rs  rtt_demo2.rs
gdut-r1-by-rust/src/: lib.rs  main.rs
gdut-r1-by-rust/src/XieFField_Lib/: mod.rs
gdut-r1-by-rust/src/XieFField_Lib/app/: app_pid.rs  mod.rs  pid.rs  tool.rs
gdut-r1-by-rust/src/XieFField_Lib/bsp/: bsp_encoder.rs  bsp_fdCANbus.rs  encoder.rs  fdCANbus.rs  mod.rs
gdut-r1-by-rust/src/XieFField_Lib/model/: mod.rs  model_debugtool.rs
gdut-r1-by-rust/src/XieFField_Lib/motor/: mod.rs  motor_DJI.rs  motor_base.rs
gdut-r1-by-rust/src/debugger/: mod.rs  watch_table.rs  watch_task.rs
gdut-r1-by-rust/src/lib/app/: tool.rs
gdut-r1-by-rust/src/lib/bsp/: encoder.rs  fdCANbus.rs  mod.rs
gdut-r1-by-rust/src/lib/motor/: mod.rs  motor_DJI.rs  motor_base.rs
rtt-debug-tool-mcu/: Cargo.toml
rtt-debug-tool-mcu-derive/: Cargo.toml
rtt-debug-tool-mcu-derive/src/: lib.rs
rtt-debug-tool-mcu/src/: lib.rs  watch_table.rs  watch_task.rs  watch_value.rs
